# leakproof

./: -q  .gitignore  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml
docs/: .nojekyll  DEMO.md  SHOW_HN.md  index.html  leakproof-hero.cast
landing/: README.md  gitleaks-evidence.txt  index.html  leakproof-demo.cast  leakproof-demo.txt
services/billing/: config.py
src/leakproof/: __init__.py  adapters.py  audit.py  audit_demo.py  cli.py
src/leakproof/hook/: __init__.py  __main__.py  install.py
src/leakproof/proxy/: __init__.py  server.py
src/leakproof/scanner/: __init__.py  rules.py  semantic.py
src/leakproof/tui/: __init__.py  __main__.py  dashboard.py
src/tripwire/: __init__.py  adapters.py  audit.py  audit_demo.py  cli.py
src/tripwire/hook/: __init__.py  __main__.py  core.py  install.py
src/tripwire/proxy/: __init__.py  server.py
src/tripwire/scanner/: __init__.py  rules.py  semantic.py
src/tripwire/tui/: __init__.py  dashboard.py
tests/: test_adapters.py  test_audit.py  test_cli.py  test_e2e.py  test_hook.py  test_new_detectors.py  test_placeholder_bypass.py  test_proxy.py  test_scanner.py  test_tui.py
tests/adversarial/: README.md  conftest.py  corpus.py  demo_planted_secret.diff  harness.py  scorecard.py  test_harness_selftest.py  test_scanner_adversarial.py
tests/fixtures/: conftest.py
