[project]
name = "leakproof"
version = "0.0.1"
description = "Local-first leak firewall for developers — see and redact exactly what your AI tools send to the cloud."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "hamstudios" }]
keywords = ["security", "dlp", "secrets", "redaction", "local-first", "ai", "privacy", "proxy", "pre-commit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
# Core is ZERO-dependency on purpose — "nothing leaves the building" + a 10s uvx install.
dependencies = []

[project.optional-dependencies]
# Egress proxy surface (async reverse-proxy). Installed by `uvx leakproof[proxy]`.
proxy = ["aiohttp>=3.9"]
# Optional local-model semantic pass (talks to a local ollama; never the cloud).
semantic = ["httpx>=0.27"]
all = ["aiohttp>=3.9", "httpx>=0.27"]
# Full dev/test toolchain — reproduces the green suite (the proxy tests are async,
# so pytest-asyncio is required to run them; without it they error as "async def
# not supported"). `pip install -e '.[dev]'` then `pytest` → 148 passing.
dev = ["pytest>=8", "pytest-asyncio>=0.23", "aiohttp>=3.9", "httpx>=0.27"]

[project.urls]
Homepage = "https://leakproof.sh"
Source = "https://github.com/acunningham-ship-it/leakproof"

[project.scripts]
leakproof = "leakproof.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leakproof"]
